WIP Add a stub for HTTP PATCHing of Revision data
